Selection to perfection

--- a/client/app/selectuser/selectuser.html
+++ b/client/app/selectuser/selectuser.html
@@ -7,8 +7,10 @@
 <div class="center">
 <div ng-init="$ctrl.selectedpost=null" class=" btn-group">
 <br>
+  <button class="btn btn-success" ng-click="$ctrl.selectedpost=''">All</button>
   <button class="btn btn-primary "  ng-repeat="post in $ctrl.allposts" ng-click="$ctrl.selectedpost=post" >{{post.name}}</button>
 <br>
+
 </div>
 </div>
 <div class="container">
@@ -17,20 +19,24 @@
     <tr>
       <th>#</th>
       <th>Name</th>
-      <th>Email</th>
-      <th>Select/Delete</th>
+      <th>Post</th>
+      <th>Vacancy</th>
+      <th>Select</th>
+      <th>Reject</th>
     </tr>
   </thead>
   <tbody>
-    <tr ng-repeat="appli in $ctrl.applications " >
+    <tr ng-repeat="appli in $ctrl.applications | filter:{postid:{_id:$ctrl.selectedpost._id}}"  >
       <th >{{$index+1}}</th>
       <td>{{appli.userid.name}}</td>
-      <td>{{appli.userid.email}}</td>
+      <td>{{appli.postid.name}}</td>
+      <td>{{appli.postid.maxapp}}</td>
       <td >
-        <button class="btn btn-primary"  ng-click="$ctrl.Approve(appli)" >Select</button> 
+        <button class="btn btn-primary"  ng-click="$ctrl.Approve(appli);
+        appli.disable=true;" ng-disabled="(appli.status || appli.disable)" ng-show="appli.postid.maxapp>0" >Select</button> 
       </td>
       <td>
-        <button class="btn btn-success" ng-click="$ctrl.Delete(appli)" >Reject</button>
+      <button class="btn btn-success" ng-click="$ctrl.Delete(appli) " >Reject</button>
       </td>
     </tr>
   </tbody>
