--- a/application.html
+++ b/application.html
@@ -30,7 +30,7 @@ Golden Circle    </a>
       <div class="panel-body">
 <b>Why? </b>I want to take the :road not taken: to start.I really enjoyed the process of filling this Application, and hope the same with being a Shaastra Coord.<br>
 <b>How? </b>
-I want to do this to the fullest of my ability.I think im ready to explore new stuff and implement them in the website.<br>
+I want to do this to the fullest of my ability.Im ready to explore new stuff and implement them in the website.<br>
 <b>What? </b>
 I would make the Backend Structure for Shaastra App that will be deployed for public.</div>
     </div>
@@ -48,7 +48,7 @@ performance (or) page design etc.,       </a>
     </div>
     <div id="collapseFour" class="panel-collapse collapse ">
       <div class="panel-body">
-I liked the Homepage so much but then the Events Details Page didnt have much Style in it .It looked as if made only using html without Bootstrap or CSS. </div>
+I liked the Homepage so much but then the Events Details Page didnt have much Style in it .It didnt seem to include much of Bootstrap or CSS. </div>
     </div>
   </div>
   <div class="panel panel-default">
@@ -111,6 +111,6 @@ The Workforce present was less so it would have been difficult in the developmen
   </div>
       </div>      
 </div>
-  </div><button class="btn btn-primary">KAARTHIK RAJA M V : CS16B108 : kaarthikrajamv@gmail.com : kaarthik-raja(github)</button>
+  </div> link>>><a href="https://github.com/kaarthik-raja/Shaastra-App"><p class="btn btn-primary">KAARTHIK RAJA M V : CS16B108 : kaarthikrajamv@gmail.com : kaarthik-raja(github)<p></a>
   <button class="btn btn-warning">Note  I Saw the website long back (presently the website has been replaced as u know).<br>I dont know exactly how the backend actually works then so the answers may not be acurate. :( </button></body>
 </html>
